<resources>
    <string name="app_name">Ezuru</string>
    <string name="read_all_reviews">Read all reviews</string>
    <string name="check_in">Check-in: </string>
    <string name="check_out">Check-out: </string>
    <string-array name="paymentTypes">
        <item>fixed</item>
        <item>percent</item>
    </string-array>
    <string name="facebook_app_id">1910766249214282</string>
    <string name="fb_login_protocol_scheme">fb1910766249214282</string>
    <string name="forgot_password">Forgot your Password ?</string>
    <string name="enter_your_email_to_send">Enter your email to send \n you instructions</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="welcome_to_ezuru">Welcome To Ezuru</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your account to access \n thousands of units</string>
    <string name="enter_your_email">email</string>
    <string name="password">Change Password</string>
    <string name="enter_your_password">password</string>
    <string name="create_a_new_account_to">Create a new account to access \n thousands of units</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="add_photos">Add photos</string>
    <string name="booking_id">Booking ID :</string>
    <string name="status">Status :</string>
    <string name="amount">Amount :</string>
    <string name="date">Date :</string>
    <string name="accepted">Accepted</string>
    <string name="contact_host">Contact host</string>
    <string name="check_your_mailbox">Check Your Mailbox.</string>
    <string name="enter_new_price">Enter new Price</string>
    <string name="new_price">new price</string>
    <string name="done">Done</string>
    <string name="filter">Filter</string>
    <string name="sorted_by">Sorted by</string>
    <string name="price_range">Price range</string>
    <string name="guests">Guests</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="rooms_and_beds">Rooms And Beds</string>
    <string name="beds">Beds</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="amenities">Amenities</string>
    <string name="facilities">Facilities</string>
    <string name="category">Category</string>
    <string name="select_date">select date</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reservation_summary">Reservation Summary</string>
    <string name="rent_fees">Rent fees</string>
    <string name="service_fees">Service fees</string>
    <string name="ezuru_fees">Booking fees</string>
    <string name="tourism_fees">Tourism fees</string>
    <string name="vat_fees">VAT fees</string>
    <string name="total">Total</string>
    <string name="start_booking">Start Booking</string>
    <string name="report_this_listing">Report this listing !</string>
    <string name="avilability">Avilability</string>
    <string name="guests_check_in">Please, pick available dates</string>
    <string name="tell_us_about_your_property">Tell us about your property</string>
    <string name="unit_title">Unit title</string>
    <string name="enter_unit_title">Enter unit title</string>
    <string name="unit_type">Unit type</string>
    <string name="how_many_guests_can_your_place_accommodate">How many guests can your place accommodate?</string>
    <string name="number_of_guests">Number of guests</string>
    <string name="number_of_beds">Number of beds</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_balcons">Number of balcons</string>
    <string name="looks_great">Looks great</string>
    <string name="add_photos_to_your_listing">Add photos to your listing</string>
    <string name="upload_contract_image">Upload Contract Image</string>
    <string name="is_the_pin_the_right_place">Is the pin the right place?</string>
    <string name="make_sure_your_location_is_accurate_keep_the_pain_inside_the_circle">make sure your location is accurate , keep the pain inside the circle.</string>
    <string name="country_region">Country / Region</string>
    <string name="government">Government</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="building_number">Building number</string>
    <string name="unit_number">Unit number</string>
    <string name="floor_number">Floor number</string>
    <string name="zip_code">ZIP Code</string>
    <string name="what_amenities_do_you_offer">What amenities do you offer?</string>
    <string name="what_space_can_guests_use">What space can guests use?</string>
    <string name="what_views_can_guests_use">What views can guests use?</string>
    <string name="additional_information">Additional Information</string>
    <string name="check_in_txt">Check in</string>
    <string name="check_out_txt">Check out</string>
    <string name="keys_delivery">Keys delivery</string>
    <string name="how_to_deliver_your_keys">How to deliver your keys?</string>
    <string name="how_to_get_your_keys">How to get your keys?</string>
    <string name="notes">Notes</string>
    <string name="extra_fees">Extra fees</string>
    <string name="cleaning_fees">Cleaning fees</string>
    <string name="cleaning_fees_type">Cleaning fees Type</string>
    <string name="parking_fees">Parking fees</string>
    <string name="parking_fees_type">Parking fees Type</string>
    <string name="pool_fees_type">Pool fees Type</string>
    <string name="pool_fees">pool Fees</string>
    <string name="gym_fees">Gym fees</string>
    <string name="gym_fees_type">Gym fees Type</string>
    <string name="finish">Finish</string>
    <string name="house_rule">House Rule</string>
    <string name="set_house_rules_for_guests">set house rules for guests</string>
    <string name="allow_children">Allow children</string>
    <string name="max_children_number">Max children number</string>
    <string name="max_children_count">Max children count</string>
    <string name="allow_animals">Allow animals</string>
    <string name="allow_infants">Allow infants</string>
    <string name="allow_extra">Allow Extra</string>
    <string name="max_extra_number">Max extra number</string>
    <string name="max_extra_count">Max extra count</string>
    <string name="enter_min_guest_count">Enter min Guest count</string>
    <string name="min_guest_count">Min Guest count</string>
    <string name="try_dahab_egypt">Search By City</string>
    <string name="filters">Filters</string>
    <string name="sorry_no_results_match_your_search">Sorry, No results match your search</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="egyptian_pound">Egyptian Pound</string>
    <string name="egp">EGP</string>
    <string name="usa_dollar">USA Dollar</string>
    <string name="usd">USD</string>
    <string name="choose_language">Choose Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="no_messages">No Messages ?</string>
    <string name="when_you_make_plans_to_n_travel_read_messages_from_your_host_here">When you make plans to \n travel, read messages from your host here.</string>
    <string name="explore_units">Explore Units</string>
    <string name="location">Location</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="change_password">Change password</string>
    <string name="about_me">About Me</string>
    <string name="type_an_information_about_yourself">Type an information about yourself</string>
    <string name="save_changes">Save Changes</string>
    <string name="sorry_no_units_in_your_favourite">Sorry, No units in your wish list</string>
    <string name="feedback">Feedback</string>
    <string name="how_was_your_overall_experience">How was your overall experience?</string>
    <string name="it_will_help_us_to_serve_you_better">It will help us to serve you better</string>
    <string name="your_message_optional">Your message ( optional )</string>
    <string name="please_specify_in_detail">Please specify in detail</string>
    <string name="units">Units</string>
    <string name="reviews">Reviews</string>
    <string name="what_type_of_department_do_you_prefer">Browse By Property Type</string>
    <string name="featured_unit">Featured Unit</string>
    <string name="tourist_places">Tourist Places</string>
    <string name="top_rated_experiences">Top-Rated Experiences</string>
    <string name="popular_places">Popular Destinations</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="notification">Notification</string>
    <string name="you_are_all_caught_up">You are all caught up!</string>
    <string name="payments">Payments</string>
    <string name="payouts">Payouts</string>
    <string name="view_and_edit_profile">View and edit profile</string>
    <string name="add_unit">Add Unit</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="my_unit">My Unit</string>
    <string name="requests_for_my_unit">Requests For My Unit</string>
    <string name="add_your_property">Add Your Property</string>
    <string name="my_booking_list">My Booking List</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="booking_done_successfully">Booking done successfully</string>
    <string name="all_reviews">All Reviews</string>
    <string name="description">Description</string>
    <string name="read_more">Read more</string>
    <string name="night">/Night</string>
    <string name="per_night26">per night</string>
    <string name="here_where_address_goes">here where address goes</string>
    <string name="about_this_host">About this host</string>
    <string name="things_to_keep_in_mind">Things to keep in mind</string>
    <string name="more_details">More Details</string>
    <string name="house_rules">House Rules</string>
    <string name="read">Read</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="free_cancellation_for_48_hour">Free cancellation for 48 hour</string>
    <string name="similar_places">Similar Places</string>
    <string name="per_night">/ night</string>
    <string name="check_availability">Check availability</string>
    <string name="change_your_login_password">Change your login password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_old_password_first">enter your old password first</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password_first">enter your new password first</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_your_new_password_first_again">enter your new password first again</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_units">My Units</string>
    <string name="pick">Pick</string>
    <string name="title">Title:</string>
    <string name="created_at">Created at:</string>
    <string name="fee">Fee:</string>
    <string name="pick_dates">Pick Dates</string>
    <string name="enter_initial_price">Enter initial price</string>
    <string name="price">Price</string>
    <string name="currencyy">Currency</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
</resources>