<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_new_price"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/newPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:hint="@string/new_price" />


    <Button
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_filled_primary_bg"
        android:paddingTop="22dp"
        android:paddingBottom="22dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>