<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:src="@drawable/ic_back_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/enter_your_email_to_send" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ex: xxxxxx@gmail.com" />


    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48sp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/rounded_filled_primary_bg"
        android:paddingTop="22dp"
        android:paddingBottom="22dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>